<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_margin="10dp"
    android:orientation="vertical">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/restaurant_item_image_container"
            android:layout_width="80dp"
            android:layout_height="80dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/restaurant_thumbnail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/restaurant_thumbnail_content_description"
                android:src="@drawable/ic_takeaway_logo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/restaurant_new_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newest"
                android:textColor="@color/white"
                android:background="@color/green"
                android:visibility="gone"
                tools:visibility="visible"
                android:textSize="10sp"
                android:padding="3dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/restaurant_best_match_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/golden"
                android:textColor="@color/white"
                android:visibility="gone"
                tools:visibility="visible"
                android:padding="3dp"
                android:textSize="10sp"
                android:text="@string/best_match"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/restaurant_new_label" />

            <ImageView
                android:id="@+id/restaurant_favorite_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_favorite_not_selected"
                tools:visibility="visible"
                android:contentDescription="@string/restaurant_thumbnail_content_description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <RatingBar
                android:id="@+id/restaurant_rating"
                style="?android:attr/ratingBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:isIndicator="true"
                android:alpha="1.0"
                android:progressBackgroundTint="@color/golden"
                android:progressTint="@color/golden"
                android:secondaryProgressTint="@color/golden"
                android:stepSize="0.1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/restaurant_item_header_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/restaurant_item_image_container"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/restaurant_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/restaurant_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/restaurant_name" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/restaurant_item_footer_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/restaurant_item_image_container">

            <LinearLayout
                android:id="@+id/restaurant_distance_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/restaurant_delivery_cost_container"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/restaurant_distance_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/restaurant_distance_icon_content_description"
                    android:src="@drawable/ic_distance" />

                <TextView
                    android:id="@+id/restaurant_distance_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/restaurant_delivery_cost_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingStart="15dp"
                android:paddingEnd="15dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/restaurant_minimal_cost_container"
                app:layout_constraintStart_toEndOf="@id/restaurant_distance_container"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/restaurant_delivery_cost_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/restaurant_delivery_cost_icon_content_description"
                    android:src="@drawable/ic_delivery_cost" />

                <TextView
                    android:id="@+id/restaurant_delivery_cost_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/restaurant_minimal_cost_container"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/restaurant_delivery_cost_container"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/restaurant_minimal_cost_icon"
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/restaurant_minimal_cost_icon_content_description"
                    android:src="@drawable/ic_minimal_cost" />

                <TextView
                    android:id="@+id/restaurant_minimal_cost_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12sp" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>